# mcp-memory-chat

./: README.md
MCPcourse/: mcp.toml  pyproject.toml
MCPcourse/mcpcourse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
MCPcourse/server/: client.py  weather.json
